# NinjaZipPy

./: demo.7z  pyproject.toml  smoke_test.py
NinjaZipPy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ninjazippy/: cli.py  zip_utils.py
output_dir/: hello.txt
