[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NinjaZipPy"
version = "0.1.0"
description = "A Python utility for zipping/unzipping .7z archives (migration of bit7z)"
authors = [{ name="Your Name", email="your@email.com" }]
dependencies = ["py7zr"]

[project.scripts]
ninjazippy = "ninjazippy.cli:main"
